<resources>
    <string name="app_name">iBaby</string>
    <string name="app_net_not_available">请检查网络是否可用!</string>

    <!-- Strings related to login -->
    <string name="hint_user_id">用户账号</string>
    <string name="hint_password">密码</string>
    <string name="txt_login_sign">登录</string>
    <string name="txt_login_register">注册</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_register_userid">登录账号</string>
    <string name="hint_register_nickname">用户昵称</string>
    <string name="hint_register_pswd">登录密码</string>
    <string name="hint_register_pswd_confirm">确认密码</string>
    <string name="txt_unique_error">哎呀,已经有人注册该账号啦~</string>
    <string name="txt_home_to_login">点击头像登录</string>
    <string name="txt_baby_birth_default">1949-10-01</string>
    <string name="toast_info_baby_nickname">哼!%s,你还没給人家起名儿呢~</string>
    <string name="toast_info_baby_birth">阿欧,%s,难道你忘了我的生日了么~</string>

    <string name="txt_vaccine_warn">接种各类疫苗的禁忌原则\n
        \t\t暂时禁忌:早产儿、难产儿，正在发热或患一般疾病的急性期儿童就属于“暂时禁忌”。这些宝宝可以在疾病康复后补种。\n
        \t\t绝对禁忌:如果你的宝宝具有免疫功能缺陷、或是严重过敏体质，就属于“绝对禁忌”,接种疫苗可能发生异常反应，甚至危及生命，所以绝对不可接种疫苗。
    </string>
    <string name="txt_vaccine1_info">第一类疫苗为免费疫苗,均经过了国际、国家证实、国家论证，有明确的科学依据，其安全性、有效性很高。 宝宝必须打，在入托、入学时，需要查验预防接种情况，没有完成接种的宝宝必须补种。</string>
    <string name="txt_vaccine2_info">第二类疫苗按知情、自愿、自费的原则,自主选择是否接种。</string>

</resources>
