<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_light_gray"
    tools:context="com.joe.ibaby.ui.login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/white"
            app:titleTextAppearance="@style/ToolbarTitle"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:textColor="@color/txt_normal"
        android:text="@string/app_name"
        android:textSize="@dimen/text_logo_size"
        android:textStyle="italic"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.joe.ibaby.view.AnimLineEditText
                android:id="@+id/edt_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                style="@style/CommonEditText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.joe.ibaby.view.AnimLineEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                style="@style/CommonEditText"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_go_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/txt_login_btn_selector"
                android:background="@drawable/bg_btn_stroke_shape"
                android:text="@string/txt_login_register"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:textColor="@color/txt_login_btn_selector"
                android:background="@drawable/bg_btn_stroke_shape"
                android:text="@string/txt_login_sign"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
