<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray"
    android:animateLayoutChanges="true"
    tools:context="com.joe.ibaby.ui.register.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/white"
            app:titleTextAppearance="@style/ToolbarTitle"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:textColor="@color/txt_normal"
        android:text="@string/app_name"
        android:textSize="@dimen/text_logo_size"
        android:textStyle="italic"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo">

        <com.joe.ibaby.view.AnimLineEditText
            android:id="@+id/edit_register_userid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_register_edit"
            android:drawableLeft="@drawable/ic_userid_selector"
            android:drawablePadding="@dimen/paddingLeft_register_edit_drawable"
            android:hint="@string/hint_register_userid"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            style="@style/CommonEditText"/>

        <com.joe.ibaby.view.AnimLineEditText
            android:id="@+id/edit_register_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_register_edit"
            android:drawableLeft="@drawable/ic_nickname_selector"
            android:drawablePadding="@dimen/paddingLeft_register_edit_drawable"
            android:hint="@string/hint_register_nickname"
            android:inputType="text"
            android:imeOptions="actionNext"
            style="@style/CommonEditText"/>

        <com.joe.ibaby.view.AnimLineEditText
            android:id="@+id/edit_register_pswd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_register_edit"
            android:drawableLeft="@drawable/ic_pswd_selector"
            android:drawablePadding="@dimen/paddingLeft_register_edit_drawable"
            android:hint="@string/hint_register_pswd"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            style="@style/CommonEditText"/>

        <com.joe.ibaby.view.AnimLineEditText
            android:id="@+id/edit_register_pswd_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_register_edit"
            android:drawableLeft="@drawable/ic_pswd_selector"
            android:drawablePadding="@dimen/paddingLeft_register_edit_drawable"
            android:hint="@string/hint_register_pswd_confirm"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            style="@style/CommonEditText"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_register_edit"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rdbtn_man"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/txt_normal"
                android:checked="true"
                android:text="汉纸~"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rdbtn_women"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/txt_normal"
                android:text="妹纸~"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_small_size"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_solid_shape"
            android:text="@string/txt_login_register"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
