<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_baby"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_default_baby"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_add_baby_item"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="宝宝信息"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/text_title_size"/>

                <CheckedTextView
                    android:id="@+id/ctv_edit_baby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bg_edit_selector"
                    android:textColor="@color/txt_edit_selector"
                    android:textSize="@dimen/text_mini_size"
                    android:checked="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="编辑"
                    android:visibility="gone"/>

            </LinearLayout>

            <TextView
                style="@style/DivList"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <com.joe.ibaby.view.AnimLineEditText
                    android:id="@+id/edit_baby_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_register_edit"
                    android:drawableLeft="@drawable/ic_nickname_selector"
                    android:drawablePadding="@dimen/paddingLeft_register_edit_drawable"
                    android:hint="@string/hint_register_nickname"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    style="@style/CommonEditText"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_add_baby_item"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="出生日期"
                        android:textColor="@color/txt_normal"
                        android:textSize="@dimen/text_default_size"/>

                    <TextView
                        android:id="@+id/tv_birth"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/txt_baby_birth_default"
                        android:background="?android:attr/selectableItemBackground"
                        android:textColor="@color/txt_normal"
                        android:textSize="@dimen/text_default_size"/>

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_add_baby_item"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdbtn_boy"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/txt_normal"
                        android:checked="true"
                        android:text="男孩儿~"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdbtn_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/txt_normal"
                        android:text="女孩儿~"/>
                </RadioGroup>

                <Button
                    android:id="@+id/btn_save_baby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/text_small_size"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_btn_solid_shape"
                    android:text="保存宝宝信息"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_add_baby_item"
                android:text="疫苗接种"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:textColor="@color/light_black"
                android:textSize="@dimen/text_title_size"/>

            <TextView
                style="@style/DivList"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/light_black"
                android:textSize="@dimen/text_mini_size"
                android:text="@string/txt_vaccine_warn"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_vaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_add_pic"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
